feat: add adaptive menu

--- a/shelter/pages/styles/base/_custom-settings.scss
+++ b/shelter/pages/styles/base/_custom-settings.scss
@@ -7,6 +7,11 @@ body {
     margin: 0 auto;
 }
 
+.container {
+    position: relative;
+    overflow-x: hidden;
+}
+
 .wrapper {
     padding: 0 40px;
 
