--- a/shelter/pages/styles/main.scss
+++ b/shelter/pages/styles/main.scss
@@ -6,6 +6,7 @@
 @import './base/custom-settings';
 @import './base/typography';
 
+@import './components/backdrop';
 @import './components/logo';
 @import './components/buttons';
 @import './components/card-input';
