--- a/shelter/pages/styles/layout/_navigation.scss
+++ b/shelter/pages/styles/layout/_navigation.scss
@@ -5,7 +5,31 @@
     list-style: none;
 
     @media (max-width: $tablet) {
-        display: none;
+        position: absolute;
+        top: -15px;
+        right: -80%;
+        width: 80%;
+        height: 807px;
+        padding: 248px 0 0 0;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+        font-size: 32px;
+        line-height: 51px;
+        background-color: $color-dark-3xl;
+        transition: 0.5s;
+    }
+
+    @media (max-width: $mobile) {
+        right: -100%;
+        width: 100%;
+    }
+
+    &.adaptive-menu {
+        right: 0;
     }
 }
 
@@ -37,8 +61,47 @@
             border-bottom: 3px solid $color-primary;
         }
     }
+
+    @media (max-width: $tablet) {
+        margin-left: 0;
+    }
 }
 
 .nav__link {
     @extend %transition;
+}
+
+.hamburger {
+    display: none;
+
+    @media (max-width: $tablet) {
+        display: block;
+        z-index: 2;
+        width: 50px;
+        margin-right: 40px;
+        transition: 0.3s;
+    }
+
+    & .line {
+        width: 30px;
+        height: 2px;
+        display: block;
+        margin: 11px auto;
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        background-color: $color-primary;
+
+        &_dark {
+            background-color: black;
+        }
+    }
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &.active {
+        transform: rotate(90deg);
+    }
 }
