--- a/shelter/pages/styles/style.css
+++ b/shelter/pages/styles/style.css
@@ -746,7 +746,7 @@ h5 {
     z-index: 2;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     gap: 40px;
     font-size: 32px;
