--- a/shelter/pages/styles/layout/_our-friends.scss
+++ b/shelter/pages/styles/layout/_our-friends.scss
@@ -18,6 +18,7 @@
 .pets {
     width: 100%;
     @include flex(90px, $justify-content: center, $align-items: center);
+    @extend %transition;
 
     &_our-pets-page {
        gap: 30px;
@@ -45,6 +46,10 @@
         background: $color-secondary;
         border: 2px solid $color-secondary;
     }
+}
+
+.pet__cover {
+    height: 270px; //so that it does not twitch when changing
 }
 
 .pet__content {
