--- a/shelter/pages/styles/layout/_help.scss
+++ b/shelter/pages/styles/layout/_help.scss
@@ -5,7 +5,7 @@
 
 .help__list {
     padding: 0 87px;
-    @include flex($gap: 55px, $justify-content: center);
+    @include flex($gap: 48px, $justify-content: center);
 
     @media (max-width: $desktop) {
         padding: 0 39px;
@@ -20,8 +20,8 @@
 }
 
 .help-item {
-    width: 15.7%;   
-    @include flex(30px, $flex-direction: column, $align-items: center, $justify-content: center);
+    width: 16.2%;   
+    @include flex(30px, $flex-direction: column, $align-items: center, $justify-content: center, $wrap: nowrap);
 
     @media (max-width: $desktop) {
         width: 170px;
