--- a/shelter/pages/styles/main.scss
+++ b/shelter/pages/styles/main.scss
@@ -10,6 +10,7 @@
 @import './components/logo';
 @import './components/buttons';
 @import './components/card-input';
+@import './components/modal';
 
 @import './layout/gradient';
 @import './layout/header';
