feat: add modal layout

--- a/shelter/pages/styles/abstracts/_variables.scss
+++ b/shelter/pages/styles/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $font-georgia: Georgia, "Times New Roman", Times, serif;
 $font-arial: Arial, Helvetica, sans-serif;
 
 $light-transition: .3s;
+$mid-transition: .5s;
 
 $letter-spacing: 0.06em;
 
