--- a/shelter/pages/styles/style.css
+++ b/shelter/pages/styles/style.css
@@ -6,10 +6,6 @@
   background-color: #F6F6F6;
 }
 
-.pet__content, .pets, .nav__link, .button {
-  transition: 0.3s;
-}
-
 .donation__container, .help__container, .our-friends__container, .about__container {
   padding: 80px 0 100px 0;
 }
@@ -17,10 +13,6 @@
   .donation__container, .help__container, .our-friends__container, .about__container {
     padding: 42px 0 42px 0;
   }
-}
-
-.footer-item, .card-input, .button, .logo__title, h5, h4, h3, .section-title {
-  letter-spacing: 0.06em;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -429,6 +421,10 @@ a {
   color: inherit;
 }
 
+ul {
+  margin: 0;
+}
+
 html {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 10px;
@@ -463,6 +459,7 @@ html {
   font-weight: 400;
   font-style: normal;
   color: #545454;
+  letter-spacing: 0.06em;
 }
 .section-title_center {
   text-align: center;
@@ -482,6 +479,7 @@ h3 {
   font-weight: 400;
   font-style: normal;
   color: #545454;
+  letter-spacing: 0.06em;
 }
 
 h4 {
@@ -491,6 +489,7 @@ h4 {
   font-weight: 400;
   font-style: normal;
   color: #545454;
+  letter-spacing: 0.06em;
 }
 @media (max-width: 767px) {
   h4 {
@@ -506,6 +505,7 @@ h5 {
   font-weight: 400;
   font-style: normal;
   color: #545454;
+  letter-spacing: 0.06em;
 }
 @media (max-width: 767px) {
   h5 {
@@ -558,7 +558,6 @@ h5 {
 
 .backdrop {
   position: fixed;
-  display: none;
   height: 100vh;
   top: 0;
   left: 0;
@@ -566,11 +565,15 @@ h5 {
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1;
+  opacity: 0;
+  pointer-events: none;
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .backdrop.active {
-  display: block;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .logo-link {
@@ -593,6 +596,7 @@ h5 {
   font-weight: 400;
   font-style: normal;
   color: #F1CDB3;
+  letter-spacing: 0.06em;
   margin-bottom: 10px;
 }
 .logo__title_dark {
@@ -620,7 +624,9 @@ h5 {
   font-weight: 400;
   font-style: normal;
   color: #292929;
+  letter-spacing: 0.06em;
   border: 2px solid #F1CDB3;
+  transition: 0.3s;
   cursor: pointer;
 }
 .button-oval {
@@ -673,6 +679,7 @@ h5 {
   font-style: normal;
   color: #545454;
   text-align: end;
+  letter-spacing: 0.06em;
   background: url(/assets/icons/credit-card.svg) no-repeat;
   background-position: 15px 10px;
   background-color: #F1CDB3;
@@ -684,6 +691,169 @@ h5 {
     width: 281px;
     font-size: 15px;
     line-height: 16.5px;
+  }
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0px;
+  flex-wrap: nowrap;
+  transition: 0.5s;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
+.modal__container {
+  position: relative;
+  width: 900px;
+  height: 500px;
+  background-color: #FAFAFA;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 0px;
+  flex-wrap: nowrap;
+  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+  border-radius: 9px;
+}
+@media (max-width: 1280px) {
+  .modal__container {
+    width: 630px;
+    height: 350px;
+  }
+}
+@media (max-width: 767px) {
+  .modal__container {
+    width: 240px;
+    height: auto;
+  }
+}
+
+.modal__img {
+  width: 500px;
+  height: 500px;
+}
+@media (max-width: 1280px) {
+  .modal__img {
+    width: 350px;
+    height: 350px;
+  }
+}
+@media (max-width: 767px) {
+  .modal__img {
+    display: none;
+  }
+}
+
+.modal__content {
+  width: 351px;
+  margin: 50px 20px 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: flex-start;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+@media (max-width: 1280px) {
+  .modal__content {
+    margin: 10px 9px 0 0;
+    gap: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .modal__content {
+    margin: 0;
+    padding: 10px;
+    gap: 22px;
+  }
+}
+
+.modal-head__title {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 3.5rem;
+  line-height: 45.5px;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+  letter-spacing: 0.06em;
+}
+.modal-head__subtitle {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 2rem;
+  line-height: 23px;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+  letter-spacing: 0.06em;
+}
+@media (max-width: 767px) {
+  .modal-head {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.modal__text {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1.5rem;
+  line-height: 16.5px;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+  letter-spacing: 0.06em;
+}
+@media (max-width: 1280px) {
+  .modal__text {
+    font-size: 1.3rem;
+    line-height: 14px;
+  }
+}
+@media (max-width: 767px) {
+  .modal__text {
+    text-align: justify;
+  }
+}
+
+.modal-list {
+  padding: 0 0 0 15px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1.5rem;
+  line-height: 16.5px;
+  font-weight: 400;
+  font-style: normal;
+  color: #F1CDB3;
+  letter-spacing: 0.06em;
+}
+.modal-list__item {
+  margin-bottom: 10px;
+}
+.modal-list__text {
+  color: black;
+}
+
+.modal__close-button {
+  position: absolute;
+  top: -52px;
+  right: -42px;
+}
+@media (max-width: 767px) {
+  .modal__close-button {
+    right: -32px;
   }
 }
 
@@ -738,9 +908,7 @@ h5 {
     height: 807px;
     padding: 248px 0 0 0;
     z-index: 2;
-    display: flex;
     flex-direction: column;
-    justify-content: start;
     align-items: center;
     gap: 40px;
     font-size: 32px;
@@ -786,6 +954,10 @@ h5 {
   .nav__item {
     margin-left: 0;
   }
+}
+
+.nav__link {
+  transition: 0.3s;
 }
 
 .hamburger {
@@ -928,6 +1100,10 @@ h5 {
   }
 }
 
+.our-friends {
+  position: relative;
+}
+
 .our-friends__container {
   display: flex;
   flex-direction: column;
@@ -953,6 +1129,7 @@ h5 {
   align-items: center;
   gap: 90px;
   flex-wrap: wrap;
+  transition: 0.3s;
 }
 .pets_our-pets-page {
   gap: 30px;
@@ -998,6 +1175,7 @@ h5 {
   align-items: center;
   gap: 30px;
   flex-wrap: wrap;
+  transition: 0.3s;
 }
 
 .controllers {
@@ -1211,6 +1389,7 @@ h5 {
   font-weight: 400;
   font-style: normal;
   color: #F1CDB3;
+  letter-spacing: 0.06em;
 }
 
 .footer__section-title {
