--- a/shelter/pages/styles/base/_typography.scss
+++ b/shelter/pages/styles/base/_typography.scss
@@ -16,7 +16,7 @@ html {
 
 .section-title {
     @include font(3.5rem, 45.5px, $color-dark-l);
-    @extend %letter-spacing;
+    letter-spacing: $letter-spacing;
 
     &_center {
         text-align: center;
@@ -31,12 +31,12 @@ html {
 
 h3 {
     @include font(2rem, 22.72px, $color-dark-l);
-    @extend %letter-spacing;
+    letter-spacing: $letter-spacing;
 }
 
 h4 {
     @include font(2rem, 23px, $color-dark-l);
-    @extend %letter-spacing;
+    letter-spacing: $letter-spacing;
 
     @media (max-width: $tablet) {
         font-size: 1.5rem;
@@ -46,7 +46,7 @@ h4 {
 
 h5 {
     @include font(1.5rem, 16.5px, $color-dark-l);
-    @extend %letter-spacing;
+    letter-spacing: $letter-spacing;
 
     @media (max-width: $tablet) {
         line-height: 24px;
