--- a/shelter/pages/styles/components/_backdrop.scss
+++ b/shelter/pages/styles/components/_backdrop.scss
@@ -1,6 +1,5 @@
 .backdrop {
     position: fixed;
-    display: none;
     height: 100vh;
     top: 0;
     left: 0;
@@ -8,9 +7,13 @@
     bottom: 0;
     background: rgba(0, 0, 0, 0.5);
     z-index: 1;
+    opacity: 0;
+    pointer-events: none;
     cursor: pointer;
+    transition: $mid-transition;
 }
 
 .backdrop.active {
-    display: block;
+    opacity: 1;
+    pointer-events: all;
 }
