--- a/shelter/pages/styles/components/_buttons.scss
+++ b/shelter/pages/styles/components/_buttons.scss
@@ -1,9 +1,9 @@
 .button {
     height: 52px;
     @include font(1.7rem, 22px, $color-dark-3xl);
-    @extend %letter-spacing;
+    letter-spacing: $letter-spacing;
     border: 2px solid $color-primary;
-    @extend %transition;
+    transition: $light-transition;
     cursor: pointer;
 
     &-oval {
