--- a/shelter/pages/styles/components/_logo.scss
+++ b/shelter/pages/styles/components/_logo.scss
@@ -8,7 +8,7 @@
 
 .logo__title {
     @include font(3.2rem, 35.2px, $color-primary);
-    @extend %letter-spacing;
+    letter-spacing: $letter-spacing;
     margin-bottom: 10px;
 
     &_dark {
