--- a/shelter/pages/styles/layout/_our-friends.scss
+++ b/shelter/pages/styles/layout/_our-friends.scss
@@ -1,5 +1,6 @@
 .our-friends {
     @extend %background-grey;
+    position: relative;
 }
 
 .our-friends__container {
@@ -18,7 +19,7 @@
 .pets {
     width: 100%;
     @include flex(90px, $justify-content: center, $align-items: center);
-    @extend %transition;
+    transition: $light-transition;
 
     &_our-pets-page {
        gap: 30px;
@@ -57,7 +58,7 @@
     padding: 30px 0;
     background-color: $color-light-s;
     @include flex(30px, $flex-direction: column, $align-items: center);
-    @extend %transition;
+    transition: $light-transition;
 }
 
 .controllers {
