--- a/shelter/pages/styles/components/_modal.scss
+++ b/shelter/pages/styles/components/_modal.scss
@@ -1,21 +1,24 @@
 .modal {
     position: absolute;
+    z-index: 2;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     @include flex($justify-content: center, $align-items: center, $wrap: nowrap);
-    transition: $mid-transition;
+    transition: $light-transition;
     opacity: 0;
     pointer-events: none;
 }
 
 .modal.active {
+    cursor: pointer;
     pointer-events: all;
     opacity: 1;
 }
 
 .modal__container {
+    cursor: default;
     position: relative;
     width: 900px;
     height: 500px;
@@ -35,6 +38,11 @@
     }
 }
 
+.modal__cover {
+    border-radius: 9px;
+    overflow: hidden;
+}
+
 .modal__img {
     width: 500px;
     height: 500px;
@@ -49,17 +57,28 @@
     }
 }
 
+.modal__content-container {
+    height: 100%;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
 .modal__content {
     width: 351px;
     margin: 50px 20px 0 0;
     @include flex(40px, $flex-direction: column);
 
     @media (max-width: $desktop) {
+        width: 260px;
         margin: 10px 9px 0 0;
         gap: 20px;
     }
 
     @media (max-width: $tablet) {
+        width: 100%;
         margin: 0;
         padding: 10px;
         gap: 22px;
@@ -67,6 +86,8 @@
 }
 
 .modal-head {
+    width: 100%;
+
     &__title {
         @include font(3.5rem, 45.5px);
         letter-spacing: $letter-spacing;
@@ -75,10 +96,14 @@
     &__subtitle {
         @include font(2rem, 23px);
         letter-spacing: $letter-spacing;
+        text-align: left;
+
+        @media (max-width: $tablet) {
+            text-align: center;
+        }
     }
 
     @media (max-width: $tablet) {
-        width: 100%;
         text-align: center;
     }
 }
