fix: fix adaptive pagination

--- a/shelter/pages/styles/components/_card-input.scss
+++ b/shelter/pages/styles/components/_card-input.scss
@@ -5,7 +5,8 @@
     @include font(2rem, 23px, $color-dark-l);
     text-align: end;
     letter-spacing: $letter-spacing;
-    background: url(/assets/icons/credit-card.svg) no-repeat;
+    background: url(../../../assets/icons/credit-card.svg);
+    background-repeat: no-repeat;
     background-position: 15px 10px;
     background-color: $color-primary;
     border: none;
