--- a/shelter/pages/styles/base/_custom-settings.scss
+++ b/shelter/pages/styles/base/_custom-settings.scss
@@ -3,13 +3,15 @@ html {
 }
 
 body {
-    max-width: 1280px;
-    margin: 0 auto;
+    background-color: $color-light-l;
 }
 
 .container {
+    max-width: 1280px;
+    margin: 0 auto;
     position: relative;
     overflow-x: hidden;
+    background-color: $color-light;
 }
 
 .wrapper {
