--- a/shelter/pages/styles/style.css
+++ b/shelter/pages/styles/style.css
@@ -687,7 +687,8 @@ h5 {
   color: #545454;
   text-align: end;
   letter-spacing: 0.06em;
-  background-image: url(../../../assets/icons/credit-card.svg);
+  background-image: url(../../../assets/icons/credit-card-ico.svg);
+  background-size: 30px 23px;
   background-repeat: no-repeat;
   background-position: 15px 10px;
   background-color: #F1CDB3;
@@ -1305,7 +1306,7 @@ h5 {
 }
 
 .help-item {
-  width: 170px;
+  width: 180px;
   display: flex;
   flex-direction: column;
   justify-content: center;
