--- a/shelter/pages/styles/abstracts/_placeholders.scss
+++ b/shelter/pages/styles/abstracts/_placeholders.scss
@@ -1,5 +1,5 @@
 %background-texture {
-    background: url(../../../assets/images/background/noise_transparent@2x.png),
+    background: url(../../../../shelter/assets/images/background/noise_transparent@2x.png),
     radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
 }
 
