--- a/shelter/pages/styles/style.css
+++ b/shelter/pages/styles/style.css
@@ -1,5 +1,5 @@
 .footer, .gradient {
-  background: url(../../../../shelter/assets/images/background/noise_transparent@2x.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
+  background: url(../../assets/images/background/noise_transparent@2x.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
 }
 
 .donation, .our-friends {
@@ -687,7 +687,7 @@ h5 {
   color: #545454;
   text-align: end;
   letter-spacing: 0.06em;
-  background-image: url(../../../../shelter/assets/icons/credit-card-ico.svg);
+  background-image: url(../../assets/icons/credit-card-ico.svg);
   background-size: 30px 23px;
   background-repeat: no-repeat;
   background-position: 15px 10px;
