--- a/shelter/pages/styles/layout/_our-friends.scss
+++ b/shelter/pages/styles/layout/_our-friends.scss
@@ -8,7 +8,7 @@
     @include flex(60px, $flex-direction: column, $align-items: center);
 
     &_our-pets-page {
-        gap: 45px;
+        gap: 60px;
     }
 
     @media (max-width: $tablet) {
@@ -20,15 +20,15 @@
     width: 100%;
     @include flex(90px, $justify-content: center, $align-items: center);
     transition: $light-transition;
-
-    &_our-pets-page {
-       gap: 30px;
-       $justify-content: space-between;
-    }
     
     @media (max-width: $desktop) {
         gap: 40px;
         justify-content: center;
+    }
+
+    &_our-pets-page {
+        gap: 30px;
+        justify-content: space-between;
     }
 }
 
