--- a/shelter/pages/styles/layout/_help.scss
+++ b/shelter/pages/styles/layout/_help.scss
@@ -4,7 +4,7 @@
 }
 
 .help__list {
-    @include flex($gap: 55px, $justify-content: center);
+    @include flex($justify-content: center);
 
     @media (max-width: $desktop) {
         padding: 0 39px;
@@ -18,9 +18,9 @@
     
 }
 
-.help-item {
-    width: 180px;   
+.help-item {  
     @include flex(30px, $flex-direction: column, $align-items: center, $justify-content: center, $wrap: nowrap);
+    padding: 0 60px;
 
     @media (max-width: $desktop) {
         width: 170px;
@@ -32,30 +32,8 @@
     }
 }
 
-.help-item:nth-of-type(3) {
-    padding-right: 15px;
-}
-
-.help-item:nth-of-type(4) {
-    padding-right: 26px;
-}
-
-.help-item:nth-of-type(5) {
-    padding-right: 10px;
-}
-
-.help-item:nth-of-type(6) {
-    padding-right: 120px;
-}
-
-.help-item:nth-of-type(7) {
-    width: 115px;
-    padding-right: 110px;
-}
-
-.help-item:nth-of-type(9) {
-    width: 200px;
-    padding-left: 55px;
+.help-item:nth-of-type(6), .help-item:nth-of-type(7), .help-item:nth-of-type(8), .help-item:nth-of-type(9) {
+    padding-top: 55px;
 }
 
 .help-item__img {
