--- a/shelter/pages/styles/layout/_footer.scss
+++ b/shelter/pages/styles/layout/_footer.scss
@@ -7,6 +7,7 @@
     @include flex($justify-content: space-between);
 
     @media (max-width: $desktop) {
+        padding-top: 15px;
         gap: 60px;
         justify-content: center;
     }
@@ -14,7 +15,7 @@
     @media (max-width: $tablet) {
         flex-direction: column;
         align-items: center;
-        gap: 40px;
+        gap: 25px;
     }
 }
 
@@ -28,6 +29,10 @@
 
     &_address {
         gap: 33px;
+
+        @media (max-width: $tablet) {
+            gap: 40px;
+        }
     }
 
     @media (max-width: $tablet) {
@@ -48,6 +53,13 @@
 
 .footer__image {
     @media (max-width: $tablet) {
+        margin-top: 15px;
         width: 260px;
+    }
+}
+
+.footer__adress-link {
+    @media (max-width: $tablet) {
+        margin-right: 25px;
     }
 }
