--- a/shelter/pages/styles/layout/_help.scss
+++ b/shelter/pages/styles/layout/_help.scss
@@ -1,6 +1,16 @@
 .help__container {
     @extend %padding-container;
     @include flex(60px, $flex-direction: column, $align-items: center);
+
+    @media (max-width: $desktop) {
+        padding-bottom: 40px;
+        justify-content: space-between;
+    }
+
+    @media (max-width: $tablet) {
+        gap: 40px;
+        padding-bottom: 10px;
+    }
 }
 
 .help__list {
@@ -13,9 +23,7 @@
 
     @media (max-width: $tablet) {
         padding: 0 5px;
-        gap: 30px;
     }
-    
 }
 
 .help-item {  
@@ -23,10 +31,12 @@
     padding: 0 60px;
 
     @media (max-width: $desktop) {
+        padding: 0 0 55px 0;
         width: 170px;
     }
 
     @media (max-width: $tablet) {
+        padding: 0 0 30px 0;
         gap: 20px;
         width: 130px;
     }
@@ -34,6 +44,9 @@
 
 .help-item:nth-of-type(6), .help-item:nth-of-type(7), .help-item:nth-of-type(8), .help-item:nth-of-type(9) {
     padding-top: 55px;
+    @media (max-width: $desktop) {
+        padding-top: 0;
+    }
 }
 
 .help-item__img {
