--- a/shelter/pages/styles/layout/_our-friends.scss
+++ b/shelter/pages/styles/layout/_our-friends.scss
@@ -7,17 +7,26 @@
     @extend %padding-container;
     @include flex(60px, $flex-direction: column, $align-items: center);
 
-    &_our-pets-page {
-        gap: 60px;
-    }
-
     @media (max-width: $tablet) {
         gap: 42px;
+    }
+
+    &_our-pets-page {
+        gap: 60px;
+
+        @media (max-width: $desktop) {
+            gap: 30px;
+            padding-bottom: 75px;
+        }
+
+        @media (max-width: $tablet) {
+            gap: 40px;
+            padding-bottom: 40px;
+        }
     }
 }
 
 .pets {
-    width: 100%;
     @include flex(90px, $justify-content: center, $align-items: center);
     transition: $light-transition;
     
@@ -29,6 +38,11 @@
     &_our-pets-page {
         gap: 30px;
         justify-content: space-between;
+
+        @media (max-width: $desktop) {
+            gap: 30px;
+            justify-content: center;
+        }
     }
 }
 
@@ -64,8 +78,13 @@
 
 .controllers {
     @include flex(20px, $justify-content: center);
+    
+    @media (max-width: $desktop) {
+        margin-top: 10px;
+    }
 
     @media (max-width: $tablet) {
+        margin-top: 5px;
         gap: 10px;
     }
 }
