feat: update part 3 according to TS

--- a/shelter/pages/styles/base/_custom-settings.scss
+++ b/shelter/pages/styles/base/_custom-settings.scss
@@ -4,6 +4,13 @@ html {
 
 body {
     background-color: $color-light-l;
+
+    &.disable-scroll {
+        overflow: hidden;
+        /* .container {
+            padding-right: 7px;
+        } */
+    }
 }
 
 .container {
